Fix #1547 - Improve dashboard legibility

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -7,6 +7,23 @@
 
 .dashboard.clear-header {
   padding-top: 116px;
+  position: relative;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: inset 0 -1px 4px rgba(218, 218, 218, 0.58);
+}
+
+.dashboard.clear-header::after {
+  background-image: url("/img/svg/scan-res-bg.svg");
+  background-position: top center;
+  background-attachment: fixed;
+  background-size: cover;
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.5;
 }
 
 h2.pref-headline {
